# screenshot-niri

./: .SRCINFO  .gitignore  Cargo.toml  FINDINGS.md  LICENSE  PKGBUILD  README.md  perf.data  perf.data.old
src/: CONTRACT.md  app.rs  cli.rs  clipboard.rs  geometry.rs  image.rs  lib.rs  main.rs  runtime.rs  stitch.rs  trace.rs
src/stitch/: canvas.rs  fixed_bands.rs  hash.rs  motion.rs  perceptual.rs  placement.rs  rgb.rs  types.rs
src/wayland/: mod.rs  screencopy.rs  selection.rs
